--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -5,8 +5,8 @@
     /* Colors: */
     --zephyr-black: #000000;
     --zephyr-white: #ffffff;
-    --zephyr-orange: #fd9326;
-    --zephyr-yellow: #f9c75d;
+    --zephyr-gray: #252525;
+    --zephyr-green: #5fe099;
     --zephyr-pink: #ff4286;
     --zephyr-blue-light: #2fc9d7;
     --zephyr-blue: #4381cf;
@@ -14,7 +14,6 @@
     --zephyr-salmon: #f67f6f;
     --zephyr-ruby: #f65257;
     --zephyr-green-light: #8cf7b7;
-    --zephyr-green: #37c073;
     --zephyr-dark: #097dde;
 }
 
@@ -180,75 +179,103 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .headline-1, .quote, .wysiwyg-block h1 {
-    color: $zephyr-black;
-    font-size: size(35);
-    line-height: size(40);
-    font-weight: 700;
-    @include min-medium-screen {
-        font-size: size(64);
-        line-height: size(60);
+    color: $zephyr-white;
+    font-family: $Canela;
+    font-size: size(27);
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: size(0.58);
+    line-height: size(37.8);
+    @include x-large-screen {
+        font-size: size(72);
+        letter-spacing: size(0.44);
+        line-height: size(66);
     }
-    @include min-large-screen {
-        font-size: size(90);
-        line-height: size(110);
-    }
+    
 }
 
 .headline-2, .tagline, .wysiwyg-block h2 {
-    color: $zephyr-black;
-    font-size: size(36);
-    line-height: size(49);
-    font-weight: 600;
-    @include min-small-screen {
-        font-size: size(48);
-        line-height: size(61);
-    }
-    @include min-large-screen {
-        font-size: size(60);
-        line-height: size(73);
+    color: $zephyr-gray;
+    font-family: $Canela;
+    font-size: size(27);
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: size(0.58);
+    line-height: size(37.8);
+    @include x-large-screen {
+        font-size: size(45);
+        letter-spacing: size(0.44);
+        line-height: size(66);
     }
 }
 
 .headline-3, .page-title, .wysiwyg-block h3 {
-    color: $zephyr-black;
-    font-size: size(48);
-    line-height: 61px;
-    font-weight: 700;
-    @include min-small-screen {
-        font-size: size(50);
+    color: $zephyr-gray;
+    font-family: $Freight;
+    font-size: size(24);
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: size(0.2);
+    line-height: size(26);
+    @include x-large-screen {
+        font-size: size(32);
     }
 }
 
 .headline-4, .subtitle, .wysiwyg-block h4 {
-    color: $zephyr-black;
-    font-size: 48px;
-    font-weight: 400;
+    color: $zephyr-gray;
+    font-family: $Canela;
+    font-size: size(21);
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: size(0.33);
+    line-height: size(29.4);
+    @include x-large-screen {
+        font-size: size(32);
+        line-height: size(45);
+    }
 }
 
 .headline-5, .section-title, .wysiwyg-block h5 {
-    color: $zephyr-black;
-    font-size: size(30);
-    line-height: size(30);
-    font-weight: 600;
+    color: $zephyr-green;
+    font-family: $Sailec;
+    font-size: size(14);
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: size(0.1);
+    line-height: size(36);
+    @include x-large-screen {
+        font-size: size(18);
+        letter-spacing: size(0.3);
+    }
 }
 
 .headline-6, .cta, .wysiwyg-block h6 {
-    color: $zephyr-black;
-    font-size: 24px;
-    line-height: 30px;
-    font-weight: 600;
+    color: $zephyr-white;
+    font-family: $Sailec;
+    font-size: size(14);
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: size(0.44);
+    line-height: size(24);
+    text-align: center;
+    text-transform: uppercase;
+    
+    &.bold {
+        font-weight: 400;
+    }
 }
 
 // in footer
 .headline-7 {
-    color: $zephyr-black;
-    font-size: size(24);
-    font-weight: 400;
-    line-height: size(31);
-    @include min-large-screen {
-        font-size: size(29);
-        line-height: size(40);
-    }
+    color: $zephyr-green;
+    font-family: $Sailec;
+    font-size: size(12);
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: size(0.6);
+    line-height: size(36);
+    text-transform: uppercase;
 }
 
 
@@ -278,69 +305,58 @@ h1, h2, h3, h4, h5, h6, p, ul {
     }
 }
 
-.paragraph, .wysiwyg-block p,
-.wysiwyg-block li {
-    color: $zephyr-black;
-    font-size: size(18);
+.paragraph, .wysiwyg-block, p, .wysiwyg-block {
+    color: $zephyr-white;
+    font-family: $Freight;
+    font-size: size(14);
     font-weight: 400;
-    line-height: size(30);
+    font-style: normal;
+    letter-spacing: size(0.5);
+    line-height: size(24);
+    
+    @include x-large-screen {
+        font-size: size(18);
+        line-height: size(28);
+    }
 }
+
 
 .paragraph-1 {
-    color: $zephyr-black;
-    font-size: size(30);
-    font-weight: 600;
-    line-height: size(45);
-}
-
-.tag {
-    color: $zephyr-black;
-    font-size: size(18);
-    font-weight: 600;
-    line-height: size(30);
-}
-
-.details {
-    color: $zephyr-blue;
+    color: $zephyr-gray;
+    font-family: $Freight;
     font-size: size(15);
-    font-weight: 600;
-    line-height: size(30);
-    text-transform: uppercase;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: size(0.5);
+    line-height: size(24);
+    
+    
+    &.small-fz {
+        font-size: size(14);
+    }
+    
+    @include x-large-screen {
+        line-height: size(26);
+        font-size: size(15);
+        
+    }
 }
 
 // header and footer links
 .small-link {
-    color: $zephyr-black;
-    font-size: size(14);
-    font-weight: 600;
-    line-height: size(14);
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
+    color: $zephyr-gray;
+    font-family: $Sailec;
+    font-size: size(15);
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: size(0.28);
+    line-height: size(24);
     
-    @include min-medium-screen {
-        font-size: size(18);
-        line-height: size(18);
+    @include x-large-screen {
+        font-size: size(14);
+        letter-spacing: size(0.3);
     }
     
-    &:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 100%;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        margin-top: size(6);
-        transition: all 200ms ease-in-out;
-        background-image: linear-gradient(-83deg, #2edfe8 16%, #0080ff 100%);
-    }
-    
-    &:hover {
-        &:before {
-            right: 0;
-        }
-    }
 }
 
 .small-text {
@@ -491,266 +507,6 @@ svg {
     @include change-gutter(85)
 }
 
-// general input style
-.component-modal {
-    form {
-        width: 100%;
-        position: relative;
-        margin: 0;
-        
-        input, textarea, select {
-            width: 100%;
-            min-height: 53px;
-            @include paddingX(size(12));
-            border: 1px solid #9899a2;
-            outline: none;
-            color: $zephyr-black;
-            font-size: 18px;
-            font-weight: 600;
-            margin-bottom: size(24);
-            
-            &::placeholder {
-                color: $zephyr-black;
-                font-size: 18px;
-                font-weight: 600;
-                line-height: 30px;
-            }
-        }
-        
-        textarea {
-            resize: none;
-            
-            &::-webkit-resizer {
-                display: none;
-                pointer-events: none;
-            }
-        }
-    }
-}
-
-section.component-modal {
-    
-    .modal {
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: -1;
-        overflow: hidden;
-        outline: 0;
-        transition: opacity .15s linear;
-        background: $zephyr-dark-blue;
-        opacity: 0;
-        pointer-events: none;
-        
-        &::-webkit-scrollbar {
-            display: none;
-        }
-        
-        &.active {
-            overflow-x: hidden;
-            overflow-y: auto;
-            opacity: 1;
-            z-index: 99;
-            pointer-events: auto;
-        }
-        
-        .close-model {
-            position: absolute;
-            top: 21px;
-            right: 28px;
-            cursor: pointer;
-            z-index: 100;
-            
-            svg {
-                &:hover {
-                    path {
-                        fill: $zephyr-blue;
-                    }
-                }
-            }
-        }
-        
-        .modal-dialog {
-            position: relative;
-            width: auto;
-            pointer-events: none;
-            margin: 0 auto;
-        }
-        
-        .headline-1 {
-            width: 100%;
-            text-align: left;
-            @include min-small-screen {
-                text-align: center;
-            }
-        }
-        
-        .headline-5 {
-            width: 100%;
-            line-height: 33px;
-            text-align: left;
-            @include min-small-screen {
-                text-align: center;
-            }
-        }
-        
-        .modal-content {
-            position: relative;
-            width: 100%;
-            pointer-events: auto;
-            background-color: #ffffff;
-            background-clip: padding-box;
-            border: 1px solid rgba(0, 0, 0, .2);
-            outline: 0;
-            margin: 0 auto;
-            
-            .data {
-                form {
-                    .tag {
-                        margin-bottom: size(5);
-                    }
-                    
-                    textarea {
-                        min-height: size(262);
-                        margin-bottom: size(50);
-                        @include min-small-screen {
-                            margin-bottom: size(29);
-                        }
-                        @include min-large-screen {
-                            min-height: size(307);
-                            margin-bottom: size(60);
-                        }
-                    }
-                }
-            }
-            
-            .main-btn {
-                margin: 0 auto;
-            }
-            
-        }
-        
-        &.contact-us {
-            .modal-dialog {
-                @include paddingY(size(70));
-                @include min-small-screen {
-                    max-width: size(768);
-                }
-                @include min-medium-screen {
-                    max-width: size(849);
-                }
-                @include min-large-screen {
-                    max-width: size(1105);
-                }
-                
-                .modal-content {
-                    padding: size(112) size(20) size(54);
-                    @include min-small-screen {
-                        padding: size(158) size(40) size(127);
-                    }
-                    @include min-medium-screen {
-                        padding: size(113) size(80) size(86);
-                    }
-                    
-                    .headline-5 {
-                        margin: size(35) auto size(45);
-                        @include min-large-screen {
-                            margin: size(22) auto size(63);
-                        }
-                    }
-                }
-            }
-        }
-        
-        &.newsletter {
-            .modal-dialog {
-                @include paddingY(size(175));
-                @media (min-width: 400px) {
-                    max-width: size(360);
-                }
-                @include min-small-screen {
-                    max-width: size(688);
-                }
-                @include min-large-screen {
-                    max-width: size(813);
-                }
-                
-                .modal-content {
-                    padding: size(175) size(20) size(177);
-                    @include min-small-screen {
-                        padding: size(55) size(60) size(50);
-                    }
-                    @include min-large-screen {
-                        padding: size(68) size(120) size(55);
-                    }
-                    
-                    .headline-5 {
-                        margin: size(43) 0 size(45);
-                        max-width: size(242);
-                        @include min-small-screen {
-                            max-width: 100%;
-                            margin: size(33) 0 size(56);
-                        }
-                    }
-                    
-                    form {
-                        //margin-bottom: size(55);
-                        margin-bottom: size(20);
-                        @include min-small-screen {
-                            margin-bottom: size(57);
-                        }
-                    }
-                    
-                    .tag {
-                        text-align: left;
-                        @media (min-width: 400px) {
-                            text-align: center;
-                        }
-                    }
-                }
-            }
-        }
-        
-        &.thank-you {
-            .modal-dialog {
-                @media (min-width: 400px) {
-                    max-width: size(360);
-                }
-                @include min-small-screen {
-                    max-width: size(689);
-                }
-                @include min-large-screen {
-                    width: size(861);
-                }
-                
-                .modal-content {
-                    padding: size(250) size(40) size(264) size(20);
-                    @media (min-width: 400px) {
-                        padding: size(80) size(40) size(80) size(20);
-                    }
-                    @include min-small-screen {
-                        padding: size(108) size(110) size(80);
-                    }
-                    @include min-large-screen {
-                        padding: size(70) size(0) size(90);
-                    }
-                    
-                    .headline-5 {
-                        margin-top: 63px;
-                        
-                        @include min-large-screen {
-                            max-width: size(460);
-                            margin: size(35) auto 0;
-                        }
-                    }
-                }
-            }
-        }
-        
-    }
-}
 
 .scrollbar-track-y {
     z-index: 1000 !important;
