added test font family to html in general

--- a/themes/zephyr/front-end/src/components/component-growth-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/index.html
@@ -4,7 +4,16 @@
 
 <section class="component-growth-guide">
   <div class="container">
-    <h6 class="headline-6 normal"></h6>
+    <div class="growth-guide">
+      <div class="growth-guide-title center">
+        <h6 class="headline-6 normal">GROWTH GUIDE</h6>
+        <h2 class="headline-2">Digital Growth Marketing & Transformation
+          for small businesses </h2>
+      </div>
+      <div class="growth-guide-content">
+      
+      </div>
+    </div>
   </div>
 </section>
 <script src="./main.js"></script>
