--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -23,7 +23,7 @@
 }
 
 html {
-    font-family: $Sailec, sans-serif;
+    font-family: revert, sans-serif;
     font-size: 10px;
     direction: ltr !important;
     width: 100%;
@@ -251,15 +251,12 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .headline-6, .cta, .wysiwyg-block h6 {
-    color: $zephyr-white;
+    color: $zephyr-gray;
     font-family: $Sailec;
     font-size: size(14);
     font-weight: 500;
-    font-style: normal;
     letter-spacing: size(0.44);
     line-height: size(24);
-    text-align: center;
-    text-transform: uppercase;
     
     &.normal {
         font-weight: 400;
