added test font family to html in general

--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -23,7 +23,7 @@
 }
 
 html {
-    font-family: revert, sans-serif;
+    font-family: Tahoma , sans-serif;
     font-size: 10px;
     direction: ltr !important;
     width: 100%;
