--- a/themes/zephyr/front-end/src/components/component-growth-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/index.html
@@ -11,7 +11,80 @@
           for small businesses </h2>
       </div>
       <div class="growth-guide-content">
-      
+        <div class="row">
+          <div class="col-12 col-md-auto">
+            <div class="left-content">
+              <ol>
+                <li class="guide">
+                  <div class="title">
+                    <h3 class="paragraph-1">An Introduction to the guide</h3>
+                    <div class="icons">
+                      <span class="plus icon">+</span>
+                      <span class="minus icon">-</span>
+                    </div>
+                  </div>
+                  <ol class="guide-content">
+                    <li class="">Who is this guide for?</li>
+                    <li class="">Websites & why I am not talking about them here.</li>
+                    <li class="">Who are we and why did we write this?</li>
+                    <li class="">How up to date is it?</li>
+                  </ol>
+                </li>
+                <li class="guide">
+                  <div class="title">
+                    <h3 class="paragraph-1">An Introduction to the guide</h3>
+                    <div class="icons">
+                      <span class="plus icon">+</span>
+                      <span class="minus icon">-</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="guide">
+                  <div class="title">
+                    <h3 class="paragraph-1">An Introduction to the guide</h3>
+                    <div class="icons">
+                      <span class="plus icon">+</span>
+                      <span class="minus icon">-</span>
+                    </div>
+                  </div>
+                  
+                </li>
+                <li class="guide">
+                  <div class="title">
+                    <h3 class="paragraph-1">An Introduction to the guide</h3>
+                    <div class="icons">
+                      <span class="plus icon">+</span>
+                      <span class="minus icon">-</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="guide">
+                  <div class="title">
+                    <h3 class="paragraph-1">An Introduction to the guide</h3>
+                    <div class="icons">
+                      <span class="plus icon">+</span>
+                      <span class="minus icon">-</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="guide">
+                  <div class="title">
+                    <h3 class="paragraph-1">An Introduction to the guide</h3>
+                    <div class="icons">
+                      <span class="plus icon">+</span>
+                      <span class="minus icon">-</span>
+                    </div>
+                  </div>
+                </li>
+              </ol>
+            </div>
+          </div>
+          <div class="col-12 col-md">
+            <div class="right-content">
+              Moaz Right
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
