add some clasess to general

--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -23,7 +23,7 @@
 }
 
 html {
-    font-family: $proxima-nove, sans-serif;
+    //font-family: $proxima-nove, sans-serif;
     font-size: 10px;
     direction: ltr !important;
     width: 100%;
