--- a/themes/zephyr/front-end/src/components/header-component/index.html
+++ b/themes/zephyr/front-end/src/components/header-component/index.html
@@ -5,10 +5,40 @@
 <header>
   <div class="container">
     <div class="header-content">
-      <a href="#">
-<!--        <img src="" alt="">-->
+      <!--      burger menu and cross-->
+      <div class="burger-and-cross">
+        <div class="menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="cross">
+          <svg xmlns="http://www.w3.org/2000/svg"
+               width="20" height="20"
+               viewBox="0 0 19 19">
+            <g>
+              <g transform="rotate(135 9.5 9.5)">
+                <path fill="#fefefd"
+                      d="M11.05 20.05a1.5 1.5 0 1 1-3 0v-21a1.5 1.5 0 0 1 3 0z"/>
+              </g>
+              <g transform="rotate(45 9.5 9.5)">
+                <path fill="#fefefd" d="M8.08-.83a1.5 1.5 0 0 1 3 0v21a1.5 1.5 0 0 1-3 0z"/>
+              </g>
+            </g>
+          </svg>
+        </div>
+      </div>
+      <!--      logo-->
+      <a class="logo" href="#">
+        <img src="../../html/images/header-logo.png" alt="header-logo">
       </a>
-    
+      <!--    links-->
+      <div class="links">
+        <a class="small-link" href="#">Sector Expertise</a>
+        <a class="small-link" href="#">About</a>
+        <a class="small-link" href="#">Growth Guide</a>
+        <a class="small-link" href="#">Say hello</a>
+      </div>
     </div>
   </div>
 </header>
