--- a/themes/zephyr/front-end/src/components/component-growth-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/index.html
@@ -15,67 +15,81 @@
           <div class="row">
             <div class="col-12 col-md-auto">
               <div class="left-content">
-                <ol>
+                <ol class="guide-container">
                   <li class="guide">
                     <div class="title">
-                      <h3 class="paragraph-1">An Introduction to the guide</h3>
+                      <h3>An Introduction to the guide</h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
                       </div>
                     </div>
                     <ol class="guide-content">
-                      <li class="">Who is this guide for?</li>
-                      <li class="">Websites & why I am not talking about them here.</li>
-                      <li class="">Who are we and why did we write this?</li>
-                      <li class="">How up to date is it?</li>
+                      <li>Who is this guide for?</li>
+                      <li>Websites & why I am not talking about them here.</li>
+                      <li>Who are we and why did we write this?</li>
+                      <li>How up to date is it?</li>
                     </ol>
                   </li>
                   <li class="guide">
                     <div class="title">
-                      <h3 class="paragraph-1">An Introduction to the guide</h3>
+                      <h3>An Introduction to the guide</h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
                       </div>
                     </div>
+                    <ol class="guide-content">
+                      <li>Who is this guide for?</li>
+                      <li>Websites & why I am not talking about them here.</li>
+                      <li>Who are we and why did we write this?</li>
+                      <li>How up to date is it?</li>
+                    </ol>
                   </li>
                   <li class="guide">
                     <div class="title">
-                      <h3 class="paragraph-1">An Introduction to the guide</h3>
+                      <h3>An Introduction to the guide</h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
                       </div>
                     </div>
-                  
+                    <ol class="guide-content">
+                      <li>Who is this guide for?</li>
+                      <li>Websites & why I am not talking about them here.</li>
+                      <li>Who are we and why did we write this?</li>
+                      <li>How up to date is it?</li>
+                    </ol>
                   </li>
                   <li class="guide">
                     <div class="title">
-                      <h3 class="paragraph-1">An Introduction to the guide</h3>
+                      <h3>An Introduction to the guide</h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
                       </div>
                     </div>
+                    <ol class="guide-content">
+                      <li>Who is this guide for?</li>
+                      <li>Websites & why I am not talking about them here.</li>
+                      <li>Who are we and why did we write this?</li>
+                      <li>How up to date is it?</li>
+                    </ol>
                   </li>
                   <li class="guide">
                     <div class="title">
-                      <h3 class="paragraph-1">An Introduction to the guide</h3>
+                      <h3>An Introduction to the guide</h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
                       </div>
                     </div>
-                  </li>
-                  <li class="guide">
-                    <div class="title">
-                      <h3 class="paragraph-1">An Introduction to the guide</h3>
-                      <div class="icons">
-                        <span class="plus icon">+</span>
-                        <span class="minus icon">-</span>
-                      </div>
-                    </div>
+                    <ol class="guide-content">
+                      <li>Who is this guide for?</li>
+                      <li>Websites & why I am not talking about them here.</li>
+                      <li>Who are we and why did we write this?</li>
+                      <li>How up to date is it?</li>
+                    </ol>
                   </li>
                 </ol>
               </div>
