--- a/themes/zephyr/front-end/src/components/header-component/index.html
+++ b/themes/zephyr/front-end/src/components/header-component/index.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 <meta content="ie=edge" http-equiv="X-UA-Compatible">
-
+<div smooth-scroll-container="">
 <header>
   <div class="container">
     <div class="header-content">
@@ -42,5 +42,5 @@
     </div>
   </div>
 </header>
-
+</div>
 <script src="./main.js"></script>
