--- a/themes/zephyr/front-end/src/components/header-component/style.scss
+++ b/themes/zephyr/front-end/src/components/header-component/style.scss
@@ -7,11 +7,19 @@ header {
         display: flex;
         align-items: center;
         @include paddingY(20);
+        @include min-medium-screen {
+            justify-content: space-between;
+        }
         
         .burger-and-cross {
             min-width: size(28);
             height: size(20);
             position: relative;
+            
+            
+            @include min-medium-screen {
+                display: none;
+            }
             
             .menu {
                 width: 100%;
@@ -46,7 +54,11 @@ header {
                 transform: translate(-50%, -50%);
                 transition: all 400ms ease-in-out;
                 z-index: 2;
-    
+                
+                svg {
+                    z-index: 2;
+                }
+                
                 &.active {
                     opacity: 1;
                     pointer-events: visible;
@@ -58,11 +70,14 @@ header {
         .logo {
             margin: 0 auto;
             z-index: 2;
+            @include min-medium-screen {
+                margin: 0;
+            }
         }
         
         .links {
             width: 100%;
-            height: 100%;
+            height: 100vh;
             position: fixed;
             top: 0;
             right: 100%;
@@ -81,12 +96,29 @@ header {
                 }
             }
             
+            &.white {
+                background: $zephyr-white;
+            }
+            
             &.active {
                 right: 0;
             }
             
+            @include min-medium-screen {
+                width: auto;
+                height: auto;
+                flex-direction: row;
+                position: relative;
+                right: 0;
+                background: none;
+                .small-link {
+                    color: $zephyr-gray;
+                    &:not(:last-child) {
+                        margin-bottom: 0;
+                        margin-right: size(62);
+                    }
+                }
+            }
         }
     }
-    
-    
 }
