--- a/themes/zephyr/front-end/src/components/component-growth-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/index.html
@@ -33,7 +33,7 @@
                   </li>
                   <li class="guide">
                     <div class="title">
-                      <h3>An Introduction to the guide</h3>
+                      <h3>Creating a Digital Growth Strategy</h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
@@ -48,7 +48,7 @@
                   </li>
                   <li class="guide">
                     <div class="title">
-                      <h3>An Introduction to the guide</h3>
+                      <h3>Measuring Success</h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
@@ -63,7 +63,7 @@
                   </li>
                   <li class="guide">
                     <div class="title">
-                      <h3>An Introduction to the guide</h3>
+                      <h3>Organic SEO </h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
@@ -78,7 +78,37 @@
                   </li>
                   <li class="guide">
                     <div class="title">
-                      <h3>An Introduction to the guide</h3>
+                      <h3>Local SEO</h3>
+                      <div class="icons">
+                        <span class="plus icon">+</span>
+                        <span class="minus icon">-</span>
+                      </div>
+                    </div>
+                    <ol class="guide-content">
+                      <li>Who is this guide for?</li>
+                      <li>Websites & why I am not talking about them here.</li>
+                      <li>Who are we and why did we write this?</li>
+                      <li>How up to date is it?</li>
+                    </ol>
+                  </li>
+                  <li class="guide">
+                    <div class="title">
+                      <h3>PPC</h3>
+                      <div class="icons">
+                        <span class="plus icon">+</span>
+                        <span class="minus icon">-</span>
+                      </div>
+                    </div>
+                    <ol class="guide-content">
+                      <li>Who is this guide for?</li>
+                      <li>Websites & why I am not talking about them here.</li>
+                      <li>Who are we and why did we write this?</li>
+                      <li>How up to date is it?</li>
+                    </ol>
+                  </li>
+                  <li class="guide">
+                    <div class="title">
+                      <h3>Social Media & Campaigns</h3>
                       <div class="icons">
                         <span class="plus icon">+</span>
                         <span class="minus icon">-</span>
@@ -92,17 +122,71 @@
                     </ol>
                   </li>
                 </ol>
+                <div class="search-input">
+                  <div class="input-wrapper">
+                    <input placeholder="Type to Search" type="search">
+                    <svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+                      <defs>
+                        <clipPath id="1epia">
+                          <path d="M0 0h16v16H0z"/>
+                        </clipPath>
+                      </defs>
+                      <g>
+                        <g>
+                          <g>
+                            <path d="M0 0h16v16H0z"/>
+                          </g>
+                          <g clip-path="url(#1epia)">
+                            <path
+                              d="M6.609 1.104a5.511 5.511 0 0 1 5.505 5.505 5.511 5.511 0 0 1-5.505 5.504A5.511 5.511 0 0 1 1.104 6.61a5.511 5.511 0 0 1 5.505-5.505zm5.044 9.768a6.593 6.593 0 0 0 1.564-4.263A6.616 6.616 0 0 0 6.61 0 6.616 6.616 0 0 0 0 6.609a6.616 6.616 0 0 0 6.609 6.608c1.563 0 3.07-.554 4.263-1.564L15.22 16l.78-.78z"
+                              fill="#606060"/>
+                          </g>
+                        </g>
+                      </g>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-12 col-md">
               <div class="right-content">
-                Moaz Right
+                <h3 class="headline-3">1. An Introduction to the guide</h3>
+                <h5>1.1   Who is this guide for?</h5>
+                <p class="paragraph-1">This guide was created to help small business owners setup or improve their digital profile in order to grow their business. Given the sections on local
+                  search, businesses
+                  with a physical location are likely to benefit from this more than those without. However if you run or are part of a business without a physical location it will still be very
+                  helpful for you.
+                  When we started writing this guide we hand in mind businesses that have between 2 and 15 full or part time me<span>mbers of staff. In all cases we are assuming that the companies are
+                  looking to grow organically without a huge amount of upfront investment and that therefore hiring agencies or building out a large marketing team is j</span>ust simply not an option.
+                  Some examples might include:</p>
+                <ul>
+                  <li>An art gallery looking to generate sales and enquiries.</li>
+                  <li>An accountancy firm looking to find new customers.</li>
+                  <li>An escape room looking to generate online bookings</li>
+                </ul>
+                <div class="image-wrapper">
+                  <img alt="guide image" src="../../html/images/guide-image.png">
+                </div>
+                <p class="paragraph-1">
+                  The guide tries to explain all the technical elements of the process as clearly and as simply as possible, that being said an interest in tech and digital is helpful and a
+                  basic understanding of how websites work (most importantly your website) will get you a long way.
+                </p>
+                <p class="paragraph-1">
+                  We appreciate that there are 101 different ways to build a website so we have tried as much as possible to keep our advice platform agnostic. That being said most of the sites
+                  we build have Wordpress content management systems and according to Kinsta, 35% of all websites use Wordpress and 62% of websites with a content management system use Wordpress
+                  so there is therefore a good chance that you to, sitting at home probably use Wordpress.
+                </p>
+                <div class="written-by d-flex align-items-center">
+                  <img alt="name of person" src="./../../html/images/se.png">
+                  <p class="paragraph-1">Writen by <span>Nick Rushton</span></p>
+                </div>
+                <h3 class="headline-3">Next Chapter ></h3>
+                <h5>Websites & why I am not talking about them here</h5>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
   </section>
 </div>
 <script src="./main.js"></script>
