--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -263,44 +263,24 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
     }
 }
 
+.headline-7{
+    color: $zephyr-gray;
+    font-family: $Freight;
+    font-size: size(18);
+    font-weight: 400;
+    font-style: italic;
+    letter-spacing: size(0.16);
+    line-height: size(66);
+    @include x-large-screen{
+        font-size: size(24);
+        line-height: normal;
+    }
+}
+
 // in footer
-.headline-7 {
-    color: $zephyr-green;
-    font-family: $Sailec;
-    font-size: size(12);
-    font-weight: 500;
-    font-style: normal;
-    letter-spacing: size(0.6);
-    line-height: size(36);
-    text-transform: uppercase;
-}
 
 
-.headline-8 {
-    color: $zephyr-black;
-    font-size: size(24);
-    line-height: size(30);
-    font-weight: 600;
-    @include min-medium-screen {
-        font-size: size(30);
-    }
-}
 
-.headline-9 {
-    color: $zephyr-black;
-    font-size: size(24);
-    line-height: size(30);
-    font-weight: 700;
-    @include min-small-screen {
-        font-size: size(36);
-        line-height: size(40);
-        
-    }
-    @include min-large-screen {
-        font-size: size(90);
-        line-height: size(110);
-    }
-}
 
 .paragraph, .wysiwyg-block, p, .wysiwyg-block {
     color: $zephyr-white;
@@ -368,7 +348,7 @@ ol {
             > li {
                 color: #3d3d3d;
                 font-family: "Acumin Pro";
-                font-size: size(13);
+                font-size: size(12);
                 letter-spacing: size(0.22);
                 line-height: size(24);
                 font-weight: 400;
